<resources>
    <string name="app_name">2004Project</string>
    <string name="remember_the_numbers">REMEMBER THE NUMBERS</string>
    <string name="enter_the_numbers">Enter the numbers</string>
    <string name="check">Check</string>
    <string name="start">Start</string>
    <string name="analog_clock">ANALOG CLOCK</string>
    <string name="how_to_read_analog_clock">How to read analog clock ?</string>
    <string name="digital_clock">DIGITAL CLOCK</string>
    <string name="how_to_read_digital_clock">How to read digital clock ?</string>
    <string name="learn_days">LEARN DAYS</string>
    <string name="learn_directions">LEARN DIRECTIONS</string>
    <string name="do_you_know_the_directions">Do you know the directions ?</string>
    <string name="let_s_look_at_some_basic_prepositions">Let\'s look at some basic prepositions</string>
    <string name="months_of_the_year">MONTHS OF THE YEAR</string>
    <string name="very_usefull_way_to_learn_months_and_days">Very usefull way to learn Months and days</string>
    <string name="learn_multiplication">LEARN MULTIPLICATION</string>
    <string name="learn_how_to_multiply_numbers">Learn how to multiply numbers</string>
    <string name="learn_how_to_spell">LEARN HOW TO SPELL</string>
    <string name="split_up_each_letter_sound_in_the_word_to_help_you_hear_them">Split up each letter sound in the word to help you hear them.</string>
    <string name="divide_a_big_word_into_smaller_words_syllables_or_parts">Divide a big word into smaller words, syllables or parts.</string>
    <string name="notice_whether_the_word_has_a_suffix">Notice whether the word has a suffix.</string>
    <string name="spell_out_each_part_of_the_word_and_then_put_them_all_together">Spell out each part of the word, and then put them all together.</string>
    <string name="learn_seasons">LEARN SEASONS</string>
    <string name="check_out_the_seasons">Check out the seasons !</string>
    <string name="learn_the_months">Learn Months</string>
    <string name="learn_the_days">Learn The Days</string>
    <string name="learn_the_seasons">Learn The Seasons</string>
    <string name="learn_the_directions">Learn The Directions</string>
    <string name="learn_the_spelling">Learn Spelling</string>
    <string name="learn_the_multiplication">Learn The Multiplication</string>
    <string name="learn_the_clock">Learn The Clock</string>
    <string name="find_the_pairs">FIND THE PAIRS</string>
    <string name="multiplicaton_game">MULTIPLICATON GAME</string>
    <string name="check_answer">Check Answer</string>
    <string name="remember_the_numbers_backwards">REMEMBER THE NUMBERS BACKWARDS</string>
    <string name="please_enter_the_numbers">Please Enter the numbers</string>
    <string name="follow_the_ball">Follow The Ball</string>
    <string name="remember_numbers">Remember Numbers</string>
    <string name="play_multiplication">Play Multiplication</string>
    <string name="match_the_images">Match the images</string>
    <string name="remember_numbers_backwards">Remember Numbers Backwards</string>
    <string name="share">Share</string>
    <string name="sign_in">Sign In</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="cmp2004_project">CMP2004 PROJECT</string>
    <string name="project_1">Project-1</string>
    <string name="learn">Learn</string>
    <string name="play">Play</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="enter_word_syllables">Enter word syllables</string>
    <string name="play_spelling">Play Spelling</string>
    <string name="target_word_merhaba">Target Word: merhaba</string>
</resources>