<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/drawer_border"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:padding="16dp"
        android:background="@drawable/header_bkg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmp2004_project"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lavender"
            android:text="@string/learn"
            android:textSize="20sp"
            android:drawableLeft="@drawable/baseline_menu_book_24"
            android:drawablePadding="8dp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lavender"
            android:text="@string/play"
            android:textSize="20sp"
            android:drawableLeft="@drawable/baseline_play_circle_24"
            android:drawablePadding="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Share"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/baseline_share_24"
            android:drawablePadding="8dp"
            android:text="@string/share"
            android:textColor="@color/lavender"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Language"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/baseline_language_24"
            android:drawablePadding="8dp"
            android:text="@string/change_language"
            android:textColor="@color/lavender"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/lavender"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lavender"
            android:text="@string/logout"
            android:textSize="20sp"
            android:drawableLeft="@drawable/baseline_exit_to_app_24"
            android:drawablePadding="8dp"/>
    </LinearLayout>
</LinearLayout>

