<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/learn_how_to_spell"
            android:textSize="42sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal">
        </TextView>
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/spell2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="18dp"
            android:text="@string/split_up_each_letter_sound_in_the_word_to_help_you_hear_them"
            android:textSize="24sp"
            android:textStyle="italic">
        </TextView>
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/spell3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="18dp"
            android:text="@string/divide_a_big_word_into_smaller_words_syllables_or_parts"
            android:textSize="24sp"
            android:textStyle="italic">
        </TextView>
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/spell1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="18dp"
            android:text="@string/notice_whether_the_word_has_a_suffix"
            android:textSize="24sp"
            android:textStyle="italic">
        </TextView>
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/spell5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="18dp"
            android:text="@string/spell_out_each_part_of_the_word_and_then_put_them_all_together"
            android:textSize="24sp"
            android:textStyle="italic">
        </TextView>

    </LinearLayout>

</ScrollView>
