<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlayActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                layout="@layout/toolbar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    android:scrollbars="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/followBall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="5dp">

                            <ImageView
                                android:layout_width="128dp"
                                android:layout_height="152dp"
                                android:layout_margin="5dp"
                                android:background="@color/white"
                                android:elevation="3dp"
                                android:src="@drawable/baby" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:paddingLeft="1.1in"
                                android:text="@string/follow_the_ball"
                                android:textColor="@color/purple_700"
                                android:textSize="23sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/rememberNumbers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="5dp">

                            <ImageView
                                android:layout_width="130dp"
                                android:layout_height="138dp"
                                android:layout_margin="5dp"
                                android:background="@color/white"
                                android:elevation="3dp"
                                android:src="@drawable/numbers" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:paddingLeft="1.1in"
                                android:text="@string/remember_numbers"
                                android:textColor="@color/purple_700"
                                android:textSize="23sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/multiplication"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="5dp">

                            <ImageView
                                android:layout_width="128dp"
                                android:layout_height="135dp"
                                android:layout_margin="5dp"
                                android:background="@color/white"
                                android:elevation="3dp"
                                android:src="@drawable/calculator" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:paddingLeft="1.1in"
                                android:text="@string/play_multiplication"
                                android:textColor="@color/purple_700"
                                android:textSize="23sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/matchingGame"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="5dp">

                            <ImageView
                                android:layout_width="120dp"
                                android:layout_height="150dp"
                                android:layout_margin="5dp"
                                android:background="@color/white"
                                android:elevation="3dp"
                                android:src="@drawable/puzzle" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:paddingLeft="1.1in"
                                android:text="@string/match_the_images"
                                android:textColor="@color/purple_700"
                                android:textSize="23sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:id="@+id/rememberBackwards"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="5dp">

                            <ImageView
                                android:layout_width="130dp"
                                android:layout_height="138dp"
                                android:layout_margin="5dp"
                                android:background="@color/white"
                                android:elevation="3dp"
                                android:src="@drawable/numbers" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:paddingLeft="1.1in"
                                android:text="@string/remember_numbers_backwards"
                                android:textColor="@color/purple_700"
                                android:textSize="23sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>
                        <androidx.cardview.widget.CardView
                            android:id="@+id/spellingGame"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="5dp">

                            <ImageView
                                android:layout_width="130dp"
                                android:layout_height="138dp"
                                android:layout_margin="5dp"
                                android:background="@color/white"
                                android:elevation="3dp"
                                android:src="@drawable/spelling" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:paddingLeft="1.1in"
                                android:text="@string/play_spelling"
                                android:textColor="@color/purple_700"
                                android:textSize="23sp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>

                        <!-- Add more CardViews as needed -->

                    </LinearLayout>
                </ScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white">

            <include
                layout="@layout/nav_drawer" />

        </RelativeLayout>

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
